<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#73c9fffa"
    card_view:cardCornerRadius="3dp">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_question"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroup"
            android:orientation="vertical"
            android:saveEnabled="true"

            >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/never"
                android:checked="false"
                android:textSize="20sp"
                android:id="@+id/radio_never"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rarely"
                android:checked="false"
                android:textSize="20sp"
                android:id="@+id/radio_rarely"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/several_days"
                android:checked="false"
                android:textSize="20sp"
                android:id="@+id/radio_several_days"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/often"
                android:checked="false"
                android:textSize="20sp"
                android:id="@+id/radio_often"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_often"
                android:checked="false"
                android:textSize="20sp"
                android:id="@+id/very_often"
                />



        </RadioGroup>










    </LinearLayout>


</androidx.cardview.widget.CardView>