<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dr_name"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#0dc9fffa"
            card_view:cardElevation="12dp"
            card_view:cardCornerRadius="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/education"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_education"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="20dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#0dc9fffa"
            card_view:cardElevation="12dp"
            card_view:cardCornerRadius="3dp"
            android:layout_margin="20dp"

            >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/doc_info"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    />


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>